remove unused code and unnecessary Transactional annotations